# sts-ai

./: .gitignore  CMakeLists.txt  justfile  snapshot_test.sh
apps/: battle-agent.cpp  battle.cpp  main.cpp  small-test.cpp
battle/: Action2.cpp  Action2.h  AutoClad.cpp  AutoClad.h  Battle.h  BattleContext2.cpp  BattleContext2.h  BattleSimulator2.cpp  BattleSimulator2.h  CardManager2.cpp  CardManager2.h  Deck2.cpp  Deck2.h  FightDefinition.cpp  FightDefinition.h  GameContext2.cpp  GameContext2.h  Player2.cpp  Player2.h  SimpleAgent2.cpp  SimpleAgent2.h  cultist_fight.json  main.cpp
battle/agents/: AutoClad.cpp  AutoClad.h  SimpleAgent2.cpp  SimpleAgent2.h
battle/scenarios/: blue_slaver.json  cultist.json  gremlin_nob.json  hexaghost.json  jaw_worm.json  large_slime.json  red_slaver.json  two_fungi_beasts.json  two_louse.json
data/agent_battles/: SimpleAgent_vs_Blue Slaver_10616636939857054021.snap  SimpleAgent_vs_Cultist_10448332194052148378.snap  SimpleAgent_vs_Gremlin Nob_7244678248054073170.snap  SimpleAgent_vs_Hexaghost_2709297576926039318.snap  SimpleAgent_vs_Jaw Worm_16978076956793254264.snap  SimpleAgent_vs_Large Slime_7508310673056056017.snap  SimpleAgent_vs_Red Slaver_8520346952809926872.snap  SimpleAgent_vs_Two Fungi Beasts_14281576318794427246.snap  SimpleAgent_vs_Two Louse_10448332194052148378.snap
include/combat/: BattleContext.h  CardInstance.h
include/sim/: PrintHelpers.h
include/sim/search/: SimpleAgent.h
include/utils/: scenarios.h
snapshots/agent_battles/: agent_Cultist_12345.snap  agent_Jaw Worm_12345.snap
src/combat/: BattleContext.cpp
src/game/: GameContext.cpp
src/sim/: PrintHelpers.cpp
src/sim/search/: SimpleAgent.cpp
tests/: CMakeLists.txt
tests/scenarios/: basic_strike_combat.json  jaw-worm.json
tests/snapshots/basic_combat/: basic_strike_combat.snap  test_updated.snap
tests/snapshots/battle_only/: basic_strike_combat.snap  jaw-worm.snap
tests/snapshots/normal/: basic_strike_combat.snap  jaw-worm.snap
tests/utils/: snapshot_generator.cpp
